completed header layout

--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
   </head>
   <body>
     <header>
+      <div class="title-container">
+        <div>
+          <img src="" alt="">
+          <input type="button" name="" value="">
+        </div>
+        <h1>
+          <span>only</span>
+          <span>Pans</span>
+        </h1>
+      </div>
       <nav>
         <input type="button" name="" value="Most Liked">
         <input type="button" name="" value="Reviews">
