added all html elements to page

--- a/index.html
+++ b/index.html
@@ -13,17 +13,159 @@
           <img src="" alt="">
           <input type="button" name="" value="">
         </div>
-        <h1>
-          <span>only</span>
-          <span>Pans</span>
-        </h1>
+        <h1><span>only</span><span>Pans</span></h1>
       </div>
       <nav>
         <input type="button" name="" value="Most Liked">
         <input type="button" name="" value="Reviews">
-        <input type="button" name="" value="Search">
+        <input type="button" name="" value="Search Page">
       </nav>
     </header>
     <main>
+      <h2>Most Liked</h2>
+      <article>
+        <section class="article-top">
+          <button type="button" name="button"></button>
+          <div>
+            <p>Likes</p>
+            <p>01</p>
+          </div>
+        </section>
+        <section class="article-bottom">
+          <h3>Name</h3>
+          <p>Date</p>
+          <a href="#">website</a>
+          <p>subscribe:</p>
+          <a>@one-green-pan</a>
+          <p>Photos</p>
+          <p>01</p>
+        </section>
+      </article>
+      <article>
+        <section class="article-top">
+          <button type="button" name="button"></button>
+          <div>
+            <p>Likes</p>
+            <p>01</p>
+          </div>
+        </section>
+        <section class="article-bottom">
+          <h3>Name</h3>
+          <p>Date</p>
+          <a href="#">website</a>
+          <p>subscribe:</p>
+          <a>@one-green-pan</a>
+          <p>Photos</p>
+          <p>01</p>
+        </section>
+      </article>
+      <article>
+        <section class="article-top">
+          <button type="button" name="button"></button>
+          <div>
+            <p>Likes</p>
+            <p>01</p>
+          </div>
+        </section>
+        <section class="article-bottom">
+          <h3>Name</h3>
+          <p>Date</p>
+          <a href="#">website</a>
+          <p>subscribe:</p>
+          <a>@one-green-pan</a>
+          <p>Photos</p>
+          <p>01</p>
+        </section>
+      </article>
+      <article>
+        <section class="article-top">
+          <button type="button" name="button"></button>
+          <div>
+            <p>Likes</p>
+            <p>01</p>
+          </div>
+        </section>
+        <section class="article-bottom">
+          <h3>Name</h3>
+          <p>Date</p>
+          <a href="#">website</a>
+          <p>subscribe:</p>
+          <a>@one-green-pan</a>
+          <p>Photos</p>
+          <p>01</p>
+        </section>
+      </article>
+      <article>
+        <section class="article-top">
+          <button type="button" name="button"></button>
+          <div>
+            <p>Likes</p>
+            <p>01</p>
+          </div>
+        </section>
+        <section class="article-bottom">
+          <h3>Name</h3>
+          <p>Date</p>
+          <a href="#">website</a>
+          <p>subscribe:</p>
+          <a>@one-green-pan</a>
+          <p>Photos</p>
+          <p>01</p>
+        </section>
+      </article>
+      <article>
+        <section class="article-top">
+          <button type="button" name="button"></button>
+          <div>
+            <p>Likes</p>
+            <p>01</p>
+          </div>
+        </section>
+        <section class="article-bottom">
+          <h3>Name</h3>
+          <p>Date</p>
+          <a href="#">website</a>
+          <p>subscribe:</p>
+          <a>@one-green-pan</a>
+          <p>Photos</p>
+          <p>01</p>
+        </section>
+      </article>
+      <article>
+        <section class="article-top">
+          <button type="button" name="button"></button>
+          <div>
+            <p>Likes</p>
+            <p>01</p>
+          </div>
+        </section>
+        <section class="article-bottom">
+          <h3>Name</h3>
+          <p>Date</p>
+          <a href="#">website</a>
+          <p>subscribe:</p>
+          <a>@one-green-pan</a>
+          <p>Photos</p>
+          <p>01</p>
+        </section>
+      </article>
+      <article>
+        <section class="article-top">
+          <button type="button" name="button"></button>
+          <div>
+            <p>Likes</p>
+            <p>01</p>
+          </div>
+        </section>
+        <section class="article-bottom">
+          <h3>Name</h3>
+          <p>Date</p>
+          <a href="#">website</a>
+          <p>subscribe:</p>
+          <a>@one-green-pan</a>
+          <p>Photos</p>
+          <p>01</p>
+        </section>
+      </article>
     </main>
   </body>
