added images and reset file

--- a/index.html
+++ b/index.html
@@ -23,149 +23,151 @@
     </header>
     <main>
       <h2>Most Liked</h2>
-      <article>
-        <section class="article-top">
-          <button type="button" name="button"></button>
-          <div>
-            <p>Likes</p>
+      <div class="article-container">
+        <article>
+          <section class="article-top">
+            <button type="button" name="button"></button>
+            <div>
+              <p>Likes</p>
+              <p>01</p>
+            </div>
+          </section>
+          <section class="article-bottom">
+            <h3>Name</h3>
+            <p>Date</p>
+            <a href="#">website</a>
+            <p>subscribe:</p>
+            <a>@one-green-pan</a>
+            <p>Photos</p>
             <p>01</p>
-          </div>
-        </section>
-        <section class="article-bottom">
-          <h3>Name</h3>
-          <p>Date</p>
-          <a href="#">website</a>
-          <p>subscribe:</p>
-          <a>@one-green-pan</a>
-          <p>Photos</p>
-          <p>01</p>
-        </section>
-      </article>
-      <article>
-        <section class="article-top">
-          <button type="button" name="button"></button>
-          <div>
-            <p>Likes</p>
+          </section>
+        </article>
+        <article>
+          <section class="article-top">
+            <button type="button" name="button"></button>
+            <div>
+              <p>Likes</p>
+              <p>01</p>
+            </div>
+          </section>
+          <section class="article-bottom">
+            <h3>Name</h3>
+            <p>Date</p>
+            <a href="#">website</a>
+            <p>subscribe:</p>
+            <a>@one-green-pan</a>
+            <p>Photos</p>
             <p>01</p>
-          </div>
-        </section>
-        <section class="article-bottom">
-          <h3>Name</h3>
-          <p>Date</p>
-          <a href="#">website</a>
-          <p>subscribe:</p>
-          <a>@one-green-pan</a>
-          <p>Photos</p>
-          <p>01</p>
-        </section>
-      </article>
-      <article>
-        <section class="article-top">
-          <button type="button" name="button"></button>
-          <div>
-            <p>Likes</p>
+          </section>
+        </article>
+        <article>
+          <section class="article-top">
+            <button type="button" name="button"></button>
+            <div>
+              <p>Likes</p>
+              <p>01</p>
+            </div>
+          </section>
+          <section class="article-bottom">
+            <h3>Name</h3>
+            <p>Date</p>
+            <a href="#">website</a>
+            <p>subscribe:</p>
+            <a>@one-green-pan</a>
+            <p>Photos</p>
             <p>01</p>
-          </div>
-        </section>
-        <section class="article-bottom">
-          <h3>Name</h3>
-          <p>Date</p>
-          <a href="#">website</a>
-          <p>subscribe:</p>
-          <a>@one-green-pan</a>
-          <p>Photos</p>
-          <p>01</p>
-        </section>
-      </article>
-      <article>
-        <section class="article-top">
-          <button type="button" name="button"></button>
-          <div>
-            <p>Likes</p>
+          </section>
+        </article>
+        <article>
+          <section class="article-top">
+            <button type="button" name="button"></button>
+            <div>
+              <p>Likes</p>
+              <p>01</p>
+            </div>
+          </section>
+          <section class="article-bottom">
+            <h3>Name</h3>
+            <p>Date</p>
+            <a href="#">website</a>
+            <p>subscribe:</p>
+            <a>@one-green-pan</a>
+            <p>Photos</p>
             <p>01</p>
-          </div>
-        </section>
-        <section class="article-bottom">
-          <h3>Name</h3>
-          <p>Date</p>
-          <a href="#">website</a>
-          <p>subscribe:</p>
-          <a>@one-green-pan</a>
-          <p>Photos</p>
-          <p>01</p>
-        </section>
-      </article>
-      <article>
-        <section class="article-top">
-          <button type="button" name="button"></button>
-          <div>
-            <p>Likes</p>
+          </section>
+        </article>
+        <article>
+          <section class="article-top">
+            <button type="button" name="button"></button>
+            <div>
+              <p>Likes</p>
+              <p>01</p>
+            </div>
+          </section>
+          <section class="article-bottom">
+            <h3>Name</h3>
+            <p>Date</p>
+            <a href="#">website</a>
+            <p>subscribe:</p>
+            <a>@one-green-pan</a>
+            <p>Photos</p>
             <p>01</p>
-          </div>
-        </section>
-        <section class="article-bottom">
-          <h3>Name</h3>
-          <p>Date</p>
-          <a href="#">website</a>
-          <p>subscribe:</p>
-          <a>@one-green-pan</a>
-          <p>Photos</p>
-          <p>01</p>
-        </section>
-      </article>
-      <article>
-        <section class="article-top">
-          <button type="button" name="button"></button>
-          <div>
-            <p>Likes</p>
+          </section>
+        </article>
+        <article>
+          <section class="article-top">
+            <button type="button" name="button"></button>
+            <div>
+              <p>Likes</p>
+              <p>01</p>
+            </div>
+          </section>
+          <section class="article-bottom">
+            <h3>Name</h3>
+            <p>Date</p>
+            <a href="#">website</a>
+            <p>subscribe:</p>
+            <a>@one-green-pan</a>
+            <p>Photos</p>
             <p>01</p>
-          </div>
-        </section>
-        <section class="article-bottom">
-          <h3>Name</h3>
-          <p>Date</p>
-          <a href="#">website</a>
-          <p>subscribe:</p>
-          <a>@one-green-pan</a>
-          <p>Photos</p>
-          <p>01</p>
-        </section>
-      </article>
-      <article>
-        <section class="article-top">
-          <button type="button" name="button"></button>
-          <div>
-            <p>Likes</p>
+          </section>
+        </article>
+        <article>
+          <section class="article-top">
+            <button type="button" name="button"></button>
+            <div>
+              <p>Likes</p>
+              <p>01</p>
+            </div>
+          </section>
+          <section class="article-bottom">
+            <h3>Name</h3>
+            <p>Date</p>
+            <a href="#">website</a>
+            <p>subscribe:</p>
+            <a>@one-green-pan</a>
+            <p>Photos</p>
             <p>01</p>
-          </div>
-        </section>
-        <section class="article-bottom">
-          <h3>Name</h3>
-          <p>Date</p>
-          <a href="#">website</a>
-          <p>subscribe:</p>
-          <a>@one-green-pan</a>
-          <p>Photos</p>
-          <p>01</p>
-        </section>
-      </article>
-      <article>
-        <section class="article-top">
-          <button type="button" name="button"></button>
-          <div>
-            <p>Likes</p>
+          </section>
+        </article>
+        <article>
+          <section class="article-top">
+            <button type="button" name="button"></button>
+            <div>
+              <p>Likes</p>
+              <p>01</p>
+            </div>
+          </section>
+          <section class="article-bottom">
+            <h3>Name</h3>
+            <p>Date</p>
+            <a href="#">website</a>
+            <p>subscribe:</p>
+            <a>@one-green-pan</a>
+            <p>Photos</p>
             <p>01</p>
-          </div>
-        </section>
-        <section class="article-bottom">
-          <h3>Name</h3>
-          <p>Date</p>
-          <a href="#">website</a>
-          <p>subscribe:</p>
-          <a>@one-green-pan</a>
-          <p>Photos</p>
-          <p>01</p>
-        </section>
-      </article>
+          </section>
+        </article>
+      </div>
     </main>
   </body>
