--- a/index.html
+++ b/index.html
@@ -5,20 +5,34 @@
     <title>OnlyPans</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Mr+De+Haviland&family=Shadows+Into+Light&display=swap" rel="stylesheet">
   </head>
   <body>
     <header>
       <div class="title-container">
-        <div>
-          <img src="" alt="">
-          <input type="button" name="" value="">
+        <div class="user-login-container">
+          <img src="assets/icon.png" alt="user icon">
+          <button type="button" name="user-login">
+            User Login
+            <img src="assets/arrow.png" alt="down arrow">
+          </button>
         </div>
-        <h1><span>only</span><span>Pans</span></h1>
+        <h1>only<span>Pans</span></h1>
       </div>
       <nav>
-        <input type="button" name="" value="Most Liked">
-        <input type="button" name="" value="Reviews">
-        <input type="button" name="" value="Search Page">
+        <button class="heart-img" type="button" name="most-liked">
+          <!-- <img src="assets/heart.svg" alt="heart"> -->
+          <p>Most Likes </p>
+        </button>
+        <button type="button" name="reviews">
+          <img src="assets/notepad.png" alt="notepad">
+          <p>Reviews</p>
+        </button>
+        <button type="button" name="search">
+          <img src="assets/search.png" alt="eyeglass">
+          <p>Search</p>
+        </button>
       </nav>
     </header>
     <main>
