header mobile complete

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
         <h1>only<span>Pans</span></h1>
       </div>
       <nav>
-        <button class="heart-img" type="button" name="most-liked">
-          <!-- <img src="assets/heart.svg" alt="heart"> -->
+        <button class="heart-btn" type="button" name="most-liked">
+          <img src="assets/heart.png" alt="heart">
           <p>Most Likes </p>
         </button>
         <button type="button" name="reviews">
