--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
       <nav>
         <button class="heart-btn" type="button" name="most-liked">
           <img src="assets/heart.png" alt="heart">
+          <img src="assets/heart-outline.png" alt="heart-outline">
           <p>Most Likes </p>
         </button>
         <button type="button" name="reviews">
@@ -39,8 +40,10 @@
       <h2>Most Liked</h2>
       <div class="article-container">
         <article>
-          <section class="article-top">
-            <button type="button" name="button"></button>
+          <section class="article-top" style="background-image: url(./assets/green-pans.jpg)">
+            <button type="button" name="button">
+              <img src="assets/heart-outline.png" alt="notepad">
+            </button>
             <div>
               <p>Likes</p>
               <p>01</p>
@@ -57,7 +60,7 @@
           </section>
         </article>
         <article>
-          <section class="article-top">
+          <section class="article-top" style="background-image: url(./assets/blue-pans.jpg)">
             <button type="button" name="button"></button>
             <div>
               <p>Likes</p>
