got mobile image sizing

--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
               <img src="assets/heart-outline.png" alt="notepad">
             </button>
             <div>
-              <p>Likes</p>
-              <p>01</p>
+              <p class="article-like">Likes</p>
+              <p class="article-like">01</p>
             </div>
           </section>
           <section class="article-bottom">
