added article bottom styling

--- a/index.html
+++ b/index.html
@@ -44,19 +44,25 @@
             <button type="button" name="button">
               <img src="assets/heart-outline.png" alt="notepad">
             </button>
-            <div>
-              <p class="article-like">Likes</p>
+            <div class="group-styler">
+              <p class="article-like txt-2">Likes</p>
               <p class="article-like">01</p>
             </div>
           </section>
           <section class="article-bottom">
-            <h3>Name</h3>
-            <p>Date</p>
+            <div class="group-styler">
+              <h3 class="txt-1">Name</h3>
+              <p>Date</p>
+            </div>
             <a href="#">website</a>
-            <p>subscribe:</p>
-            <a>@one-green-pan</a>
-            <p>Photos</p>
-            <p>01</p>
+            <div class="group-styler">
+              <p class="txt-2">subscribe:</p>
+              <a class="txt-1">@one-green-pan</a>
+            </div>
+            <div class="group-styler">
+              <p class="txt-2">Photos</p>
+              <p>01</p>
+            </div>
           </section>
         </article>
         <article>
