added font styling to article bottom

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
               <h3 class="txt-1">Name</h3>
               <p>Date</p>
             </div>
-            <a href="#">website</a>
+            <a class="website" href="https://www.target.com/c/pots-pans-cookware-kitchen-dining/sale/-/N-yqpatZ5tdv0">Check Out The Green Pan's Personal Page</a>
             <div class="group-styler">
               <p class="txt-2">subscribe:</p>
               <a class="txt-1">@one-green-pan</a>
