completed mobile view

--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
         <article>
           <section class="article-top" style="background-image: url(./assets/green-pans.jpg)">
             <button type="button" name="button">
-              <img src="assets/heart-outline.png" alt="notepad">
+              <img class="like-heart" src="assets/heart-outline.png" alt="notepad">
             </button>
             <div class="group-styler">
-              <p class="article-like txt-2">Likes</p>
-              <p class="article-like">01</p>
+              <p class="txt-2">Likes</p>
+              <p class="num">01</p>
             </div>
           </section>
           <section class="article-bottom">
@@ -61,7 +61,7 @@
             </div>
             <div class="group-styler">
               <p class="txt-2">Photos</p>
-              <p>01</p>
+              <p class="num">01</p>
             </div>
           </section>
         </article>
@@ -70,7 +70,7 @@
             <button type="button" name="button"></button>
             <div>
               <p>Likes</p>
-              <p>01</p>
+              <p class="num">01</p>
             </div>
           </section>
           <section class="article-bottom">
@@ -88,7 +88,7 @@
             <button type="button" name="button"></button>
             <div>
               <p>Likes</p>
-              <p>01</p>
+              <p class="num">01</p>
             </div>
           </section>
           <section class="article-bottom">
