--- a/index.html
+++ b/index.html
@@ -41,8 +41,6 @@
       <div class="article-container">
       </div>
     </main>
-    <script type="text/javascript" src="script.js">
-
-    </script>
+    <script type="text/javascript" src="script.js"></script>
   </body>
 </html>
