--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="user-login-container">
           <img src="assets/icon.png" alt="user icon">
           <button type="button" name="user-login">
-            User Login
+            <p>User Login</p>
             <img src="assets/arrow.png" alt="down arrow">
           </button>
         </div>
